# auspost-blade-mcp

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml  sidereal-plugin.yaml  stallari-plugin.yaml
src/auspost_blade_mcp/: __main__.py  auth.py  client.py  formatters.py  models.py  server.py
tests/: conftest.py  test_client.py  test_formatters.py  test_models.py  test_server.py
tests/e2e/: test_pac.py
